[package]
name = "libweb_css_rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

# After changing dependencies, regenerate the Flatpak sources:
#   python3 Meta/CMake/flatpak/generate-cargo-sources.py
[build-dependencies]
cbindgen = "0.29"
serde_json = { version = "1", features = ["preserve_order"] }

[features]
default = []
allocator = []

[lints]
workspace = true
